Up to Stage 4 validated for Project

--- a/project/notebooks/api_scrape_data.ipynb
+++ b/project/notebooks/api_scrape_data.ipynb
@@ -6,18 +6,104 @@
    "metadata": {},
    "source": [
     "# Project — Data Acquisition and Ingestion\n",
-    "Owner: \n",
-    "Date: \n",
+    "Owner: Kushal Mamillapalli\n",
+    "Date: 08/20\n",
     "\n",
     "## Goals\n",
-    "- Pull daily equity prices from a reproducible API (Alpha Vantage free tier or yfinance fallback) with secrets via `.env`.\n",
-    "- Scrape a permitted public table to augment market context (e.g., Yahoo Finance Gainers).\n",
-    "- Validate schemas and persist timestamped raw files under `data/raw/` near this notebook."
+    "- Pull Financial Data from Kaggle using Python code that gives a df and convert to csv\n",
+    "\n",
+    "### Kept the other code just in case, but the Two cells with Kaggle are used for acquisition along with the utilities\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7423b40",
+   "metadata": {},
+   "source": [
+    "## Utilities\n",
+    "Helper functions for timestamps, validation, and IO. Prefer explicit schema checks at ingestion time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "id": "cfe3adc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ts():\n",
+    "    return dt.datetime.now().strftime('%Y%m%d-%H%M%S')\n",
+    "\n",
+    "def save_csv(df: pd.DataFrame, prefix: str, **meta):\n",
+    "    mid = '_'.join([f\"{k}-{v}\" for k,v in meta.items()])\n",
+    "    path = RAW / f\"{prefix}_{mid}_{ts()}.csv\"\n",
+    "    df.to_csv(path, index=False)\n",
+    "    print('Saved', path)\n",
+    "    return path\n",
+    "\n",
+    "def validate(df: pd.DataFrame, required):\n",
+    "    missing = [c for c in required if c not in df.columns]\n",
+    "    return {'missing': missing, 'shape': df.shape, 'na_total': int(df.isna().sum().sum())}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89624132",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "## Kaggle Dataset Download\n",
+    "- Source: Kaggle API via `kagglehub`\n",
+    "- Target: Credit Card Fraud Detection dataset (mlg-ulb/creditcardfraud)\n",
+    "- Notes: Download latest version; dataset includes 285K+ transactions with 31 features for fraud classification.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0dc15734",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.8), please consider upgrading to the latest version (0.3.12).\n",
+      "Dataset shape: (284807, 31)\n",
+      "Columns: ['Time', 'V1', 'V2', 'V3', 'V4', 'V5', 'V6', 'V7', 'V8', 'V9', 'V10', 'V11', 'V12', 'V13', 'V14', 'V15', 'V16', 'V17', 'V18', 'V19', 'V20', 'V21', 'V22', 'V23', 'V24', 'V25', 'V26', 'V27', 'V28', 'Amount', 'Class']\n",
+      "Saved ../data/raw/fraud_kaggle_creditcard_source-kaggle_dataset-creditcardfraud_20250820-192958.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install dependencies as needed:\n",
+    "# pip install kagglehub[pandas-datasets]\n",
+    "import kagglehub\n",
+    "from kagglehub import KaggleDatasetAdapter\n",
+    "import pandas as pd\n",
+    "import os, pathlib, datetime as dt\n",
+    "import requests\n",
+    "\n",
+    "RAW = pathlib.Path(os.getenv('DATA_DIR_RAW')); RAW.mkdir(parents=True, exist_ok=True)\n",
+    "# Load the latest version\n",
+    "df = kagglehub.load_dataset(\n",
+    "    KaggleDatasetAdapter.PANDAS,\n",
+    "    \"mlg-ulb/creditcardfraud\",\n",
+    "    \"creditcard.csv\"\n",
+    ")\n",
+    "\n",
+    "print(\"Dataset shape:\", df.shape)\n",
+    "print(\"Columns:\", df.columns.tolist())\n",
+    "\n",
+    "_ = save_csv(df, prefix='fraud_kaggle_creditcard', source='kaggle', dataset='creditcardfraud')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fdcdcc4c",
    "metadata": {},
    "outputs": [
@@ -36,39 +122,8 @@
     "from bs4 import BeautifulSoup\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "RAW = pathlib.Path('data/raw'); RAW.mkdir(parents=True, exist_ok=True)\n",
+    "RAW = pathlib.Path(os.getenv('DATA_DIR_RAW')); RAW.mkdir(parents=True, exist_ok=True)\n",
     "load_dotenv(); print('ALPHAVANTAGE_API_KEY loaded?', bool(os.getenv('ALPHAVANTAGE_API_KEY')))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d7423b40",
-   "metadata": {},
-   "source": [
-    "## Utilities\n",
-    "Helper functions for timestamps, validation, and IO. Prefer explicit schema checks at ingestion time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "cfe3adc0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ts():\n",
-    "    return dt.datetime.now().strftime('%Y%m%d-%H%M%S')\n",
-    "\n",
-    "def save_csv(df: pd.DataFrame, prefix: str, **meta):\n",
-    "    mid = '_'.join([f\"{k}-{v}\" for k,v in meta.items()])\n",
-    "    path = RAW / f\"{prefix}_{mid}_{ts()}.csv\"\n",
-    "    df.to_csv(path, index=False)\n",
-    "    print('Saved', path)\n",
-    "    return path\n",
-    "\n",
-    "def validate(df: pd.DataFrame, required):\n",
-    "    missing = [c for c in required if c not in df.columns]\n",
-    "    return {'missing': missing, 'shape': df.shape, 'na_total': int(df.isna().sum().sum())}"
    ]
   },
   {
@@ -231,59 +286,6 @@
    ],
    "source": [
     "_ = save_csv(df_scrape, prefix='scrape', site='yahoo_finance', table='gainers')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "89624132",
-   "metadata": {},
-   "source": [
-    "## Kaggle Dataset Download\n",
-    "- Source: Kaggle API via `kagglehub`\n",
-    "- Target: Credit Card Fraud Detection dataset (mlg-ulb/creditcardfraud)\n",
-    "- Notes: Download latest version; dataset includes 285K+ transactions with 31 features for fraud classification.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "0dc15734",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.8), please consider upgrading to the latest version (0.3.12).\n",
-      "Dataset shape: (284807, 31)\n",
-      "Columns: ['Time', 'V1', 'V2', 'V3', 'V4', 'V5', 'V6', 'V7', 'V8', 'V9', 'V10', 'V11', 'V12', 'V13', 'V14', 'V15', 'V16', 'V17', 'V18', 'V19', 'V20', 'V21', 'V22', 'V23', 'V24', 'V25', 'V26', 'V27', 'V28', 'Amount', 'Class']\n",
-      "Saved to: ../data/raw/fraud_kaggle_creditcard_20250820-114449.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Install dependencies as needed:\n",
-    "# pip install kagglehub[pandas-datasets]\n",
-    "import kagglehub\n",
-    "from kagglehub import KaggleDatasetAdapter\n",
-    "import pandas as pd\n",
-    "import datetime as dt\n",
-    "\n",
-    "# Load the latest version\n",
-    "df = kagglehub.load_dataset(\n",
-    "    KaggleDatasetAdapter.PANDAS,\n",
-    "    \"mlg-ulb/creditcardfraud\",\n",
-    "    \"creditcard.csv\"\n",
-    ")\n",
-    "\n",
-    "print(\"Dataset shape:\", df.shape)\n",
-    "print(\"Columns:\", df.columns.tolist())\n",
-    "\n",
-    "# Save to your existing RAW directory\n",
-    "timestamp = dt.datetime.now().strftime('%Y%m%d-%H%M%S')\n",
-    "output_path = os.getenv('DATA_DIR_RAW')+  \"/\"+ f\"fraud_kaggle_creditcard_{timestamp}.csv\"\n",
-    "df.to_csv(output_path, index=False)\n",
-    "print(f\"Saved to: {output_path}\")"
    ]
   },
   {
