--- a/project/notebooks/data_storage.ipynb
+++ b/project/notebooks/data_storage.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "# Project — Data Storage\n",
-    "Owner: \n",
-    "Date: \n",
+    "Owner: Kushal Mamillapalli   \n",
+    "Date: 08/20\n",
     "\n",
     "## Goals\n",
     "- Configure env-driven paths for `data/raw/` and `data/processed/`.\n",
@@ -25,8 +25,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RAW -> /Users/Kushal/FRE/bootcamp_kushal_mamillapalli/homework/homework5/data/raw\n",
-      "PROC -> /Users/Kushal/FRE/bootcamp_kushal_mamillapalli/homework/homework5/data/processed\n"
+      "RAW -> /Users/Kushal/FRE/bootcamp_kushal_mamillapalli/project/data/raw\n",
+      "PROC -> /Users/Kushal/FRE/bootcamp_kushal_mamillapalli/project/data/processed\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "0ea666f8",
    "metadata": {},
    "outputs": [
@@ -80,65 +80,192 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>price</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V4</th>\n",
+       "      <th>V5</th>\n",
+       "      <th>V6</th>\n",
+       "      <th>V7</th>\n",
+       "      <th>V8</th>\n",
+       "      <th>V9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>V21</th>\n",
+       "      <th>V22</th>\n",
+       "      <th>V23</th>\n",
+       "      <th>V24</th>\n",
+       "      <th>V25</th>\n",
+       "      <th>V26</th>\n",
+       "      <th>V27</th>\n",
+       "      <th>V28</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024-01-01</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>150.129211</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.359807</td>\n",
+       "      <td>-0.072781</td>\n",
+       "      <td>2.536347</td>\n",
+       "      <td>1.378155</td>\n",
+       "      <td>-0.338321</td>\n",
+       "      <td>0.462388</td>\n",
+       "      <td>0.239599</td>\n",
+       "      <td>0.098698</td>\n",
+       "      <td>0.363787</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.018307</td>\n",
+       "      <td>0.277838</td>\n",
+       "      <td>-0.110474</td>\n",
+       "      <td>0.066928</td>\n",
+       "      <td>0.128539</td>\n",
+       "      <td>-0.189115</td>\n",
+       "      <td>0.133558</td>\n",
+       "      <td>-0.021053</td>\n",
+       "      <td>149.62</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024-01-02</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>149.641697</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.191857</td>\n",
+       "      <td>0.266151</td>\n",
+       "      <td>0.166480</td>\n",
+       "      <td>0.448154</td>\n",
+       "      <td>0.060018</td>\n",
+       "      <td>-0.082361</td>\n",
+       "      <td>-0.078803</td>\n",
+       "      <td>0.085102</td>\n",
+       "      <td>-0.255425</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.225775</td>\n",
+       "      <td>-0.638672</td>\n",
+       "      <td>0.101288</td>\n",
+       "      <td>-0.339846</td>\n",
+       "      <td>0.167170</td>\n",
+       "      <td>0.125895</td>\n",
+       "      <td>-0.008983</td>\n",
+       "      <td>0.014724</td>\n",
+       "      <td>2.69</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024-01-03</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>149.285432</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.358354</td>\n",
+       "      <td>-1.340163</td>\n",
+       "      <td>1.773209</td>\n",
+       "      <td>0.379780</td>\n",
+       "      <td>-0.503198</td>\n",
+       "      <td>1.800499</td>\n",
+       "      <td>0.791461</td>\n",
+       "      <td>0.247676</td>\n",
+       "      <td>-1.514654</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.247998</td>\n",
+       "      <td>0.771679</td>\n",
+       "      <td>0.909412</td>\n",
+       "      <td>-0.689281</td>\n",
+       "      <td>-0.327642</td>\n",
+       "      <td>-0.139097</td>\n",
+       "      <td>-0.055353</td>\n",
+       "      <td>-0.059752</td>\n",
+       "      <td>378.66</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024-01-04</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>149.101848</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-0.966272</td>\n",
+       "      <td>-0.185226</td>\n",
+       "      <td>1.792993</td>\n",
+       "      <td>-0.863291</td>\n",
+       "      <td>-0.010309</td>\n",
+       "      <td>1.247203</td>\n",
+       "      <td>0.237609</td>\n",
+       "      <td>0.377436</td>\n",
+       "      <td>-1.387024</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.108300</td>\n",
+       "      <td>0.005274</td>\n",
+       "      <td>-0.190321</td>\n",
+       "      <td>-1.175575</td>\n",
+       "      <td>0.647376</td>\n",
+       "      <td>-0.221929</td>\n",
+       "      <td>0.062723</td>\n",
+       "      <td>0.061458</td>\n",
+       "      <td>123.50</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024-01-05</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>149.873934</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-1.158233</td>\n",
+       "      <td>0.877737</td>\n",
+       "      <td>1.548718</td>\n",
+       "      <td>0.403034</td>\n",
+       "      <td>-0.407193</td>\n",
+       "      <td>0.095921</td>\n",
+       "      <td>0.592941</td>\n",
+       "      <td>-0.270533</td>\n",
+       "      <td>0.817739</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.009431</td>\n",
+       "      <td>0.798278</td>\n",
+       "      <td>-0.137458</td>\n",
+       "      <td>0.141267</td>\n",
+       "      <td>-0.206010</td>\n",
+       "      <td>0.502292</td>\n",
+       "      <td>0.219422</td>\n",
+       "      <td>0.215153</td>\n",
+       "      <td>69.99</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        date ticker       price\n",
-       "0 2024-01-01   AAPL  150.129211\n",
-       "1 2024-01-02   AAPL  149.641697\n",
-       "2 2024-01-03   AAPL  149.285432\n",
-       "3 2024-01-04   AAPL  149.101848\n",
-       "4 2024-01-05   AAPL  149.873934"
+       "   Time        V1        V2        V3        V4        V5        V6        V7  \\\n",
+       "0   0.0 -1.359807 -0.072781  2.536347  1.378155 -0.338321  0.462388  0.239599   \n",
+       "1   0.0  1.191857  0.266151  0.166480  0.448154  0.060018 -0.082361 -0.078803   \n",
+       "2   1.0 -1.358354 -1.340163  1.773209  0.379780 -0.503198  1.800499  0.791461   \n",
+       "3   1.0 -0.966272 -0.185226  1.792993 -0.863291 -0.010309  1.247203  0.237609   \n",
+       "4   2.0 -1.158233  0.877737  1.548718  0.403034 -0.407193  0.095921  0.592941   \n",
+       "\n",
+       "         V8        V9  ...       V21       V22       V23       V24       V25  \\\n",
+       "0  0.098698  0.363787  ... -0.018307  0.277838 -0.110474  0.066928  0.128539   \n",
+       "1  0.085102 -0.255425  ... -0.225775 -0.638672  0.101288 -0.339846  0.167170   \n",
+       "2  0.247676 -1.514654  ...  0.247998  0.771679  0.909412 -0.689281 -0.327642   \n",
+       "3  0.377436 -1.387024  ... -0.108300  0.005274 -0.190321 -1.175575  0.647376   \n",
+       "4 -0.270533  0.817739  ... -0.009431  0.798278 -0.137458  0.141267 -0.206010   \n",
+       "\n",
+       "        V26       V27       V28  Amount  Class  \n",
+       "0 -0.189115  0.133558 -0.021053  149.62      0  \n",
+       "1  0.125895 -0.008983  0.014724    2.69      0  \n",
+       "2 -0.139097 -0.055353 -0.059752  378.66      0  \n",
+       "3 -0.221929  0.062723  0.061458  123.50      0  \n",
+       "4  0.502292  0.219422  0.215153   69.99      0  \n",
+       "\n",
+       "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "dates = pd.date_range('2024-01-01', periods=20, freq='D')\n",
-    "df = pd.DataFrame({'date': dates, 'ticker': ['AAPL']*20, 'price': 150 + np.random.randn(20).cumsum()})\n",
-    "df.head()"
+    "df = pd.read_csv('../data/raw/fraud_kaggle_creditcard_source-kaggle_dataset-creditcardfraud_20250820-192958.csv')\n",
+    "df.head()\n"
    ]
   },
   {
@@ -153,17 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "e895d65a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('data/processed/sample_20250818-102348.parquet')"
+       "PosixPath('../data/processed/fraud_kaggle_creditcard_source-kaggle_dataset-creditcardfraud_20250820-213245.parquet')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,13 +298,10 @@
    "source": [
     "def ts(): return dt.datetime.now().strftime('%Y%m%d-%H%M%S')\n",
     "\n",
-    "# TODO: Save CSV\n",
-    "csv_path = RAW / f\"sample_{ts()}.csv\"\n",
-    "df.to_csv(csv_path, index=False)\n",
-    "csv_path\n",
+    "\n",
     "\n",
     "# TODO: Save Parquet\n",
-    "pq_path = PROC / f\"sample_{ts()}.parquet\"\n",
+    "pq_path = PROC / f\"fraud_kaggle_creditcard_source-kaggle_dataset-creditcardfraud_{ts()}.parquet\"\n",
     "try:\n",
     "    df.to_parquet(pq_path)\n",
     "except Exception as e:\n",
@@ -198,17 +322,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "111e8b32",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/31/_t7r4pl15ng3lrdcglpq152w0000gr/T/ipykernel_63433/473037615.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df_csv = pd.read_csv(csv_path, parse_dates=['Time'])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'shape_equal': True, 'date_is_datetime': True, 'price_is_numeric': True}"
+       "{'shape_equal': True, 'amount_is_numeric': True}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,18 +349,18 @@
     "def validate_loaded(original, reloaded):\n",
     "    checks = {\n",
     "        'shape_equal': original.shape == reloaded.shape,\n",
-    "        'date_is_datetime': pd.api.types.is_datetime64_any_dtype(reloaded['date']) if 'date' in reloaded.columns else False,\n",
-    "        'price_is_numeric': pd.api.types.is_numeric_dtype(reloaded['price']) if 'price' in reloaded.columns else False,\n",
+    "        'amount_is_numeric': pd.api.types.is_numeric_dtype(reloaded['Amount']) if 'Amount' in reloaded.columns else False,\n",
     "    }\n",
     "    return checks\n",
-    "\n",
-    "df_csv = pd.read_csv(csv_path, parse_dates=['date'])\n",
-    "validate_loaded(df, df_csv)"
+    "csv_path = \"../data/raw/fraud_kaggle_creditcard_source-kaggle_dataset-creditcardfraud_20250820-192958.csv\"\n",
+    "df_csv = pd.read_csv(csv_path, parse_dates=['Time'])\n",
+    "validate_loaded(df, df_csv)\n",
+    "#looks good"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "ebf33f86",
    "metadata": {},
    "outputs": [],
@@ -254,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "9c316884",
    "metadata": {},
    "outputs": [],
@@ -307,9 +439,9 @@
    "metadata": {},
    "source": [
     "## Documentation & Insights\n",
-    "- Storage strategy: CSV for portability, Parquet for efficient analytics; both stored with timestamps to enable lineage.\n",
-    "- Validation: Compare shapes and critical dtypes on reload; fail fast on schema drift.\n",
-    "- Practical insight: Prefer Parquet in downstream notebooks to reduce IO and preserve dtypes; fall back to CSV for interchange or when pyarrow is unavailable.\n"
+    "- Storage strategy: CSV for portability, Parquet for efficient analytics due to column structure and defined type; both stored with timestamps to enable lineage.\n",
+    "- Validation: Compare shapes and critical dtypes on reload to validate\n",
+    "- Practical insight: Parquet is better for efficiency but CSV is easier to use\n"
    ]
   }
  ],
