--- a/homework/stage08_exploratory-data-analysis/notebooks/stage08_exploratory-data-analysis_homework-starter.ipynb
+++ b/homework/stage08_exploratory-data-analysis/notebooks/stage08_exploratory-data-analysis_homework-starter.ipynb
@@ -568,27 +568,24 @@
       "metadata": {},
       "source": [
         "## 6) Insights & Assumptions (write your commentary)\n",
-        "- TODO: Top 3 insights\n",
-        "- TODO: Assumptions & risks\n",
-        "- TODO: Next steps before modeling (cleaning & features)\n",
         "\n",
-        "- Insights\n",
+        "## Insights\n",
         " - Judging by the Correlaiton matrix there are two strong relationships, transcactions and spending (which makes sense as transactions are proportional to spending) and income and transactions. Income and transactions makes sense since a higher income person has more spending power than a lower income person. However, this isn't completely linear or anything because the highest transactions are not with teh highest incomes and the density of medium - high transactions are at 40000 rather than 60000-80000. This indicates that there isi a minijmum income for this generous spending that slightly increases as income increases, but not very much.\n",
         "- Age and income are not related. They have a negative value in the correlation matrix and the plot shows no correlation. Therefore, it cannot be assumed, at least for this dataset. \n",
         "- Though region is not seen in the correlation matrix, it is evident that there seems to be a link between transaction patterns and the region as the North region has less high transactions than the others, and South and West each ahve one very hgih spender each. This can make sense in the real world as location, and the GDP of the area can affect income and therefore transactions; also the availability of transactions (such as clothing, other nonessentials assuming essentials are around the same wherever) is affected too. \n",
         "\n",
-        "- Assumptions/Risks\n",
+        "## Assumptions/Risks\n",
         "- Data Quality is good, with only random missing data. \n",
         "- Outliers are actual people, not bad data\n",
         "- Very simple assumption in that spend and transactions are related, though the only mitigating factor would be the case where there are too many small transactions that don't avffect spend enough. \n",
         "- Overfitting is a risk, there is a really small sample size so any trained model will bias features and the data might be incorrect for larger populations. \n",
         "- Time is only set for 5 months, there will be risks for predicting periods outside of this range. \n",
         "\n",
-        "- Next steps before modeling\n",
+        "## Next steps before modeling\n",
         "- Data Cleaning will be done using techniques from before (winsorization or iqr)\n",
         "- Using plots like this there will be outliers accounted for based on the information. \n",
         "\n",
-        "- Features\n",
+        "## Features\n",
         "- Age, income are definitely good featuers as there si a large range for age and income should affect the spend/transactions\n",
         "- Time based forecasting to account for seasonal tendencies, also rolling averages for other things like paaycheck releases (7, 14, 30 day)"
       ]
