--- a/homework/stage09_feature-engineering/notebooks/stage09_feature-engineering_homework-starter.ipynb
+++ b/homework/stage09_feature-engineering/notebooks/stage09_feature-engineering_homework-starter.ipynb
@@ -285,17 +285,187 @@
    "metadata": {},
    "source": [
     "### Rationale for Feature 1\n",
-    "This feature is used because it analyzes how much of a salary is used for spending. It would be good because it shows how much of a salary someone wants to spend for any income, and can help predict for any relations between more spending based on income, or if your spend is just based on how much salary you want to use, which would indicate that"
+    "This feature (spend-to-income ratio) is the proportion of salary allocated to spending. It's valuable because it reveals spending behavior independent of income level - whether someone is a conservative spender (low ratio) or aggressive spender (high ratio). This helps distinguish between income-driven spending patterns and personal spending preferences, which could improve prediction accuracy for future spending behavior."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>income</th>\n",
+       "      <th>monthly_spend</th>\n",
+       "      <th>credit_score</th>\n",
+       "      <th>spend_income_ratio</th>\n",
+       "      <th>yearly_spend_estimate</th>\n",
+       "      <th>credit_score_per_spend</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>86460</td>\n",
+       "      <td>3129</td>\n",
+       "      <td>661</td>\n",
+       "      <td>0.036190</td>\n",
+       "      <td>37548</td>\n",
+       "      <td>0.024853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>66002</td>\n",
+       "      <td>1191</td>\n",
+       "      <td>668</td>\n",
+       "      <td>0.018045</td>\n",
+       "      <td>14292</td>\n",
+       "      <td>0.065985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>74681</td>\n",
+       "      <td>1237</td>\n",
+       "      <td>734</td>\n",
+       "      <td>0.016564</td>\n",
+       "      <td>14844</td>\n",
+       "      <td>0.069808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>93613</td>\n",
+       "      <td>2581</td>\n",
+       "      <td>712</td>\n",
+       "      <td>0.027571</td>\n",
+       "      <td>30972</td>\n",
+       "      <td>0.032454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>88013</td>\n",
+       "      <td>1296</td>\n",
+       "      <td>712</td>\n",
+       "      <td>0.014725</td>\n",
+       "      <td>15552</td>\n",
+       "      <td>0.064633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>70598</td>\n",
+       "      <td>1897</td>\n",
+       "      <td>736</td>\n",
+       "      <td>0.026870</td>\n",
+       "      <td>22764</td>\n",
+       "      <td>0.045645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>60157</td>\n",
+       "      <td>2463</td>\n",
+       "      <td>684</td>\n",
+       "      <td>0.040943</td>\n",
+       "      <td>29556</td>\n",
+       "      <td>0.032672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>86788</td>\n",
+       "      <td>2494</td>\n",
+       "      <td>709</td>\n",
+       "      <td>0.028737</td>\n",
+       "      <td>29928</td>\n",
+       "      <td>0.033445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>61903</td>\n",
+       "      <td>3297</td>\n",
+       "      <td>660</td>\n",
+       "      <td>0.053261</td>\n",
+       "      <td>39564</td>\n",
+       "      <td>0.023551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>66029</td>\n",
+       "      <td>2801</td>\n",
+       "      <td>698</td>\n",
+       "      <td>0.042421</td>\n",
+       "      <td>33612</td>\n",
+       "      <td>0.029317</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    income  monthly_spend  credit_score  spend_income_ratio  \\\n",
+       "0    86460           3129           661            0.036190   \n",
+       "1    66002           1191           668            0.018045   \n",
+       "2    74681           1237           734            0.016564   \n",
+       "3    93613           2581           712            0.027571   \n",
+       "4    88013           1296           712            0.014725   \n",
+       "..     ...            ...           ...                 ...   \n",
+       "95   70598           1897           736            0.026870   \n",
+       "96   60157           2463           684            0.040943   \n",
+       "97   86788           2494           709            0.028737   \n",
+       "98   61903           3297           660            0.053261   \n",
+       "99   66029           2801           698            0.042421   \n",
+       "\n",
+       "    yearly_spend_estimate  credit_score_per_spend  \n",
+       "0                   37548                0.024853  \n",
+       "1                   14292                0.065985  \n",
+       "2                   14844                0.069808  \n",
+       "3                   30972                0.032454  \n",
+       "4                   15552                0.064633  \n",
+       "..                    ...                     ...  \n",
+       "95                  22764                0.045645  \n",
+       "96                  29556                0.032672  \n",
+       "97                  29928                0.033445  \n",
+       "98                  39564                0.023551  \n",
+       "99                  33612                0.029317  \n",
+       "\n",
+       "[100 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: Add another feature\n",
-    "# Example: df['rolling_spend_mean'] = df['monthly_spend'].rolling(3).mean()"
+    "df['credit_score_per_spend'] = (df['credit_score']/850 * 100) / df['monthly_spend']\n",
+    "df"
    ]
   },
   {
@@ -303,7 +473,7 @@
    "metadata": {},
    "source": [
     "### Rationale for Feature 2\n",
-    "Explain why this feature may help a model. Reference your EDA."
+    "This feature can be useful because it takes into account how credit score can affect spending. Income does not totally affect spending, so this can help identify how responsiblity with payments and money affects your spending. Another feature that could be extrapolated could take the proportion of income to spend to remove the affect of income on spending. "
    ]
   }
  ],
