--- a/project/notebooks/api_scrape_data.ipynb
+++ b/project/notebooks/api_scrape_data.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cfe3adc0",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0dc15734",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
       "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.8), please consider upgrading to the latest version (0.3.12).\n",
       "Dataset shape: (284807, 31)\n",
       "Columns: ['Time', 'V1', 'V2', 'V3', 'V4', 'V5', 'V6', 'V7', 'V8', 'V9', 'V10', 'V11', 'V12', 'V13', 'V14', 'V15', 'V16', 'V17', 'V18', 'V19', 'V20', 'V21', 'V22', 'V23', 'V24', 'V25', 'V26', 'V27', 'V28', 'Amount', 'Class']\n",
-      "Saved ../data/raw/fraud_kaggle_creditcard_source-kaggle_dataset-creditcardfraud_20250820-192958.csv\n"
+      "Saved to: ../data/raw/fraud_kaggle_creditcard_20250820-192210.csv\n"
      ]
     }
    ],
@@ -84,10 +84,9 @@
     "import kagglehub\n",
     "from kagglehub import KaggleDatasetAdapter\n",
     "import pandas as pd\n",
-    "import os, pathlib, datetime as dt\n",
-    "import requests\n",
+    "import datetime as dt\n",
+    "import os\n",
     "\n",
-    "RAW = pathlib.Path(os.getenv('DATA_DIR_RAW')); RAW.mkdir(parents=True, exist_ok=True)\n",
     "# Load the latest version\n",
     "df = kagglehub.load_dataset(\n",
     "    KaggleDatasetAdapter.PANDAS,\n",
@@ -98,12 +97,16 @@
     "print(\"Dataset shape:\", df.shape)\n",
     "print(\"Columns:\", df.columns.tolist())\n",
     "\n",
-    "_ = save_csv(df, prefix='fraud_kaggle_creditcard', source='kaggle', dataset='creditcardfraud')"
+    "# Save to your existing RAW directory\n",
+    "timestamp = dt.datetime.now().strftime('%Y%m%d-%H%M%S')\n",
+    "output_path = RAW / f\"fraud_kaggle_creditcard_{timestamp}.csv\"\n",
+    "df.to_csv(output_path, index=False)\n",
+    "print(f\"Saved to: {output_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fdcdcc4c",
    "metadata": {},
    "outputs": [
@@ -122,7 +125,7 @@
     "from bs4 import BeautifulSoup\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "RAW = pathlib.Path(os.getenv('DATA_DIR_RAW')); RAW.mkdir(parents=True, exist_ok=True)\n",
+    "RAW = pathlib.Path('../data/raw'); RAW.mkdir(parents=True, exist_ok=True)\n",
     "load_dotenv(); print('ALPHAVANTAGE_API_KEY loaded?', bool(os.getenv('ALPHAVANTAGE_API_KEY')))"
    ]
   },
