--- a/project/notebooks/feature_analysis.ipynb
+++ b/project/notebooks/feature_analysis.ipynb
@@ -643,8 +643,8 @@
    "metadata": {},
    "source": [
     "# Feature explanation\n",
-    "##V1 - V28 are all anonymized engineered or original features that can be helpful during training; first columns used are based on maggnitude in coefficient matrix\n",
-    "##The other transactions, specifically _transactions are the number of transactions in that timestep, which can be used \n"
+    "### V1 - V28 are all anonymized engineered or original features that can be helpful during training; first columns used are based on maggnitude in coefficient matrix\n",
+    "### The other transactions, specifically _transactions are the number of transactions in that timestep, which can be used to see per minutes or per hour how many transactions are done. For example, if a transaction is done at hour 1 - 6, assuming that is AM time, this could be a predictor of a fraudulent transaction. Minute is also used, but that is far more trivial than hour due to each minute being less likely to point to fraud as transactions are done at any point of an hour. \n"
    ]
   },
   {
