--- a/homework/stage12-results-reporting-delivery-design-stakeholder-communication/notebooks/stage12-results-reporting-delivery-design-stakeholder-communication_homework-starter.ipynb
+++ b/homework/stage12-results-reporting-delivery-design-stakeholder-communication/notebooks/stage12-results-reporting-delivery-design-stakeholder-communication_homework-starter.ipynb
@@ -389,19 +389,11 @@
     "- **Chart 1 takeaway:** The baseline has lower risk and good return, and the outlier based shows higher return but for higher risk. The imputed scenario shows medium risk but the lowest return. Therefore the highest returns have the highest risk, and the next best returns have the lower risk. Data cleaning gives two options that can affect what model is taken based on the stakeholder's decisions (though the imputed option is actually worse than the baseline). \n",
     "- **Chart 2 takeaway:** This shows the same implications but just for returns as Chart 1. The graph can be misleading on what to use because it does not show the associated risk for each. \n",
     "- **Chart 3 takeaway:** The graph shows the metricA over time for all three categories; A has the strongest, with Z in second place and Y in third place. \n",
-    "- Assumptions and Sensitivities\n",
+    "- **Assumptions and Sensitivities**\n",
     "- It is difficult to interpret Chart 3 due to a lack of data; more data would help for and greatly change the outcomes due to the aspect of time being relevant\n",
     "- The Sharpe ratio uses the latest risk free rate.\n",
     "- The results are greatly sensitive to the outlier handling decisions"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5f80cc7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
