--- a/project/notebooks/time-series-classification.ipynb
+++ b/project/notebooks/time-series-classification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "[284807 rows x 31 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,84 +430,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>price</th>\n",
-       "      <th>ret</th>\n",
-       "      <th>log_ret</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-01-01</th>\n",
-       "      <td>101.735412</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-04</th>\n",
-       "      <td>101.292875</td>\n",
-       "      <td>-0.004350</td>\n",
-       "      <td>-0.004359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-05</th>\n",
-       "      <td>101.356527</td>\n",
-       "      <td>0.000628</td>\n",
-       "      <td>0.000628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-06</th>\n",
-       "      <td>101.800950</td>\n",
-       "      <td>0.004385</td>\n",
-       "      <td>0.004375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-07</th>\n",
-       "      <td>101.031283</td>\n",
-       "      <td>-0.007561</td>\n",
-       "      <td>-0.007589</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 price       ret   log_ret\n",
-       "2021-01-01  101.735412  0.000000  0.000000\n",
-       "2021-01-04  101.292875 -0.004350 -0.004359\n",
-       "2021-01-05  101.356527  0.000628  0.000628\n",
-       "2021-01-06  101.800950  0.004385  0.004375\n",
-       "2021-01-07  101.031283 -0.007561 -0.007589"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Synthetic series with regimes & jumps\n",
     "# n=500\n",
@@ -534,115 +459,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>price</th>\n",
-       "      <th>ret</th>\n",
-       "      <th>log_ret</th>\n",
-       "      <th>lag_1</th>\n",
-       "      <th>roll_mean_5</th>\n",
-       "      <th>y_next_ret</th>\n",
-       "      <th>y_up</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-01-08</th>\n",
-       "      <td>101.063685</td>\n",
-       "      <td>0.000321</td>\n",
-       "      <td>0.000321</td>\n",
-       "      <td>-0.007561</td>\n",
-       "      <td>-0.001379</td>\n",
-       "      <td>0.000291</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-11</th>\n",
-       "      <td>101.093108</td>\n",
-       "      <td>0.000291</td>\n",
-       "      <td>0.000291</td>\n",
-       "      <td>0.000321</td>\n",
-       "      <td>-0.001315</td>\n",
-       "      <td>-0.017099</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-12</th>\n",
-       "      <td>99.364481</td>\n",
-       "      <td>-0.017099</td>\n",
-       "      <td>-0.017247</td>\n",
-       "      <td>0.000291</td>\n",
-       "      <td>-0.000387</td>\n",
-       "      <td>0.010532</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-13</th>\n",
-       "      <td>100.410953</td>\n",
-       "      <td>0.010532</td>\n",
-       "      <td>0.010477</td>\n",
-       "      <td>-0.017099</td>\n",
-       "      <td>-0.003933</td>\n",
-       "      <td>0.006325</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-14</th>\n",
-       "      <td>101.046042</td>\n",
-       "      <td>0.006325</td>\n",
-       "      <td>0.006305</td>\n",
-       "      <td>0.010532</td>\n",
-       "      <td>-0.002703</td>\n",
-       "      <td>-0.005937</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 price       ret   log_ret     lag_1  roll_mean_5  y_next_ret  \\\n",
-       "2021-01-08  101.063685  0.000321  0.000321 -0.007561    -0.001379    0.000291   \n",
-       "2021-01-11  101.093108  0.000291  0.000291  0.000321    -0.001315   -0.017099   \n",
-       "2021-01-12   99.364481 -0.017099 -0.017247  0.000291    -0.000387    0.010532   \n",
-       "2021-01-13  100.410953  0.010532  0.010477 -0.017099    -0.003933    0.006325   \n",
-       "2021-01-14  101.046042  0.006325  0.006305  0.010532    -0.002703   -0.005937   \n",
-       "\n",
-       "            y_up  \n",
-       "2021-01-08     1  \n",
-       "2021-01-11     0  \n",
-       "2021-01-12     1  \n",
-       "2021-01-13     1  \n",
-       "2021-01-14     0  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Not really a good option due to the problem not being time series\n",
     "\n",
@@ -667,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,14 +510,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.00021095601127277678\n"
+      "RMSE: 0.0007427440431515436\n"
      ]
     }
    ],
@@ -745,12 +564,14 @@
    ],
    "source": [
     "# Track 2: Classification (up/down)\n",
+    "from matplotlib.pyplot import savefig\n",
     "clf = Pipeline([('scaler', StandardScaler()), ('logit', LogisticRegression(max_iter=1000))])\n",
     "clf.fit(X_tr, y_tr_clf)\n",
     "predc = clf.predict(X_te)\n",
     "print(classification_report(y_te_clf, predc))\n",
     "cm = confusion_matrix(y_te_clf, predc)\n",
-    "sns.heatmap(cm, annot=True, fmt='d'); plt.title('Confusion Matrix'); plt.show()"
+    "sns.heatmap(cm, annot=True, fmt='d'); plt.title('Confusion Matrix'); \n",
+    "savefig('../data/images/confusion_matrix.png'); plt.show()"
    ]
   },
   {
@@ -772,6 +593,14 @@
     "### Save Notebook\n",
     "Remember to save as `notebooks/modeling_<team>.ipynb`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d4286cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
