Finish Project/Homework 13, await tweaks and verification of runnability (env works correctly)

--- a/homework/stage10a_modeling-linear-regression/notebooks/stage10a_modeling-linear-regression_homework-starter.ipynb
+++ b/homework/stage10a_modeling-linear-regression/notebooks/stage10a_modeling-linear-regression_homework-starter.ipynb
@@ -271,16 +271,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67ab2cb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 4) Interpretation (write your conclusions below)\n",
     "- Linearity: The relationship looks almost linear as th data points for the most part follow the line closely, but at the end it does start to veer off. Taking a closer look reveals an almost wavy motion. It could be linear with data variance and error taken into account. \n",
-    "- Homoscedasticity: Since the pattern in the \n",
+    "- Homoscedasticity: Since the pattern in the Residuals vs Fitted is not narrowing or widening, the data seems ot be homoscedastic. Therefore the variance is constant accross all predicted values. \n",
     "- Normality: Based on the histogram it does somewhat follow the correct pattern in that the bell curve is seen in the middle, though there are outliers on each side and the right side of the curve is not very accurate. \n",
-    "- Independence:\n",
-    "- Which model do you trust and why?:\n",
-    "- Next step you’d try:"
+    "- Independence: Based on the plot, there does seem to be independence because the residuals don't seem related to one another. \n",
+    "- Which model do you trust and why?: Based on the metrics, I think the linear model is better than the polynomial because the R^2 value is smaller and the RMSE is equal. However, I think a more optimized Polynomial model could be better due to the shape of the graph. Furthermore, non linear models can be tested to see if the metrics can be improved anymore\n",
+    "- Next step you’d try:\n",
+    "I would try different non linear models such as polynomial models. They are pretty good at finding more complicated relationshpis, and the polynomial look seems to be evident in the graph. "
    ]
   }
  ],
